add normal js styles

--- a/src/shared/styles/colors.scss
+++ b/src/shared/styles/colors.scss
@@ -1,9 +1,9 @@
 :root {
-    --dark-blue-color: #274C5B;
-    --dark-grey-color: #525C60;
-    --light-green-color: #7EB693;
-    --light-grey-color: #D4D4D4;
-    --white-color: #F9F8F8;
-    --silver-color: #EFF6F1;
-    --pale-yellow-color: #EFD372;
+    --dark-blue-color: #274c5b;
+    --dark-grey-color: #525c60;
+    --light-green-color: #7eb693;
+    --light-grey-color: #d4d4d4;
+    --white-color: #f9f8f8;
+    --silver-color: #eff6f1;
+    --pale-yellow-color: #efd372;
 }
