--- a/src/shared/styles/main.scss
+++ b/src/shared/styles/main.scss
@@ -11,7 +11,12 @@ html {
     font-family: Roboto;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-weight: 800;
     color: var(--dark-blue-color);
 }
