--- a/src/shared/styles/main.scss
+++ b/src/shared/styles/main.scss
@@ -5,10 +5,10 @@
     padding: 0;
     box-sizing: border-box;
     font-family: inherit;
+    color: inherit;
 }
 
 a {
-    color: inherit;
     text-decoration: inherit;
 }
 
@@ -38,8 +38,9 @@ h3 {
     line-height: 46.88px;
 }
 h4 {
-    font-size: 35px;
-    line-height: 41.02px;
+    font-size: 36px;
+    font-weight: 400;
+    line-height: 49.06px;
 }
 h5 {
     font-size: 30px;
@@ -50,6 +51,7 @@ h6 {
     line-height: 29.3px;
 }
 p {
+    font-family: Open Sans;
     font-size: 18px;
     font-weight: 400;
     line-height: 29.77px;
@@ -67,4 +69,10 @@ ol li::marker {
     font-size: 18px;
     font-weight: 700;
     line-height: 29.77px;
+}
+
+.container {
+    max-width: 1400px;
+    margin: 0 auto;
+    padding-inline: 0.5rem;
 }
