--- a/src/shared/styles/main.scss
+++ b/src/shared/styles/main.scss
@@ -76,3 +76,8 @@ ol li::marker {
     margin: 0 auto;
     padding-inline: 0.5rem;
 }
+.line {
+    height: 0;
+    border: none;
+    border-top: 1px solid #dedddd;
+}
